--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "private": true,
   "license": "MIT",
   "devDependencies": {
-    "parcel-bundler": "^1.12.4"
+    "parcel-bundler": "^1.12.4",
+    "sass": "^1.29.0"
+  },
+  "dependencies": {
+    "bootstrap": "^5.0.0-alpha3"
   }
 }
