--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "sass": "^1.29.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "bootstrap": "^5.0.0-alpha3"
   }
 }
