--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
-    "bootstrap": "^5.0.0-alpha3"
+    "bootstrap": "^5.0.0-alpha3",
+    "popper.js": "^1.16.1"
   }
 }
