--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "dev": "parcel --host 0.0.0.0 index.html"
+    "dev": "parcel --host 0.0.0.0 src/*.html"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.4",
