--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "dev:login": "parcel --host 0.0.0.0 src/login.html"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.12.4",
-    "sass": "^1.29.0"
+    "parcel-bundler": "^1.12.5",
+    "sass": "^1.32.11"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.1",
-    "bootstrap": "^5.0.0-alpha3",
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "bootstrap": "^5.0.0-beta3",
     "popper.js": "^1.16.1"
   }
 }
